# big-data

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  docker-bake.hcl  pyproject.toml
docker/: README.md  entrypoint.sh
report/: README.md  main.tex  report-outline.md
report/sections/: 01-danh-sach-thanh-vien.tex  02-mo-dau.tex  03-co-so-ly-thuyet.tex  04-noi-dung-thuc-hien.tex  05-tong-ket.tex  references.tex
src/harm_detection/: __init__.py  cli.py  config.py
src/harm_detection/api/: app.py
src/harm_detection/modeling/: training.py
src/harm_detection/pipeline/: data_pipeline.py  spark.py
src/harm_detection/reporting/: reports.py
src/harm_detection/utils/: io.py  text.py
tests/: conftest.py  test_api.py  test_data_pipeline_fixture.py  test_pipeline_artifacts.py  test_text_utils.py
