[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generalizable-harmful-video-detection"
version = "0.1.0"
description = "Local Spark pipeline for harmful video detection with weak supervision and pseudo-labeling."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "fastapi>=0.109,<1.0",
  "joblib>=1.3,<2.0",
  "matplotlib>=3.8,<4.0",
  "openpyxl>=3.1,<4.0",
  "pandas>=2.2,<3.0",
  "pyarrow>=15,<25",
  "pyspark>=4.1,<5.0",
  "scikit-learn>=1.4,<2.0",
  "seaborn>=0.13,<1.0",
  "uvicorn>=0.27,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4,<9.0"]

[project.scripts]
harm-detect = "harm_detection.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
